fix: edited navbar max-width to align with polykey.io

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -62,7 +62,7 @@
 }
 
 .navbar__inner {
-  max-width: 950px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
